enh: adding IoSinks to API and CLI
